--- a/cau-1.html
+++ b/cau-1.html
@@ -7,7 +7,28 @@
     <title>Câu 1</title>
     <link rel="stylesheet" href="css/cau-1.css">
 </head>
+
 <body>
+    <h2>Câu 1: Brands (Các thương hiệu)</h2>
+    <p><strong>Yêu cầu</strong>: Sử dụng HTML và CSS để dựng khối bên dưới (Dùng display: flex;).</p>
+    <style>
+        h2 {
+            display: block;
+            font-size: 1.5em;
+            margin-block-start: 0.83em;
+            margin-block-end: 0.83em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            font-weight: bold;
+        }
+        p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+        }
+    </style>
     <div class="section">
         <div class="container">
             <h2 class="title">Thương hiệu nổi bật</h2>
