--- a/cau-4.html
+++ b/cau-4.html
@@ -12,12 +12,32 @@
 <body>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        h2 {
+            display: block;
+            font-size: 1.5em;
+            margin-block-start: 0.83em;
+            margin-block-end: 0.83em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            font-weight: bold;
+        }
+
+        p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+        }
     </style>
-
-
+    <h2>Câu 4: Newsletter (Form đăng ký nhận tin)</h2>
+    <p><strong>Yêu cầu</strong>: Sử dụng HTML và CSS để dựng khối bên dưới.</p>
     <div class="container">
         <div class="news-letter">
-            <div style="background-image: url('https://course-front-end-24.vercel.app/lessons/lesson-6/images/dots.svg');width: 50%;height: 100%;position: absolute;top: 0;right: 0;"></div>
+            <div
+                style="background-image: url('https://course-front-end-24.vercel.app/lessons/lesson-6/images/dots.svg');width: 50%;height: 100%;position: absolute;top: 0;right: 0;">
+            </div>
             <div class="content">
                 <div class="content__sub-title">
                     Get Latest Histudy Update
