--- a/cau-5.html
+++ b/cau-5.html
@@ -9,10 +9,30 @@
     <link rel="stylesheet" href="css/cau-5.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        h2 {
+            display: block;
+            font-size: 1.5em;
+            margin-block-start: 0.83em;
+            margin-block-end: 0.83em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            font-weight: bold;
+        }
+
+        p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+        }
     </style>
 </head>
 
 <body>
+    <h2>Câu 5: Team (Danh sách thành viên)</h2>
+    <p><strong>Yêu cầu</strong>: Sử dụng HTML và CSS để dựng khối bên dưới.</p>
     <div class="section">
         <div class="container">
             <h2 class="title">Đội ngũ nhân sự</h2>
@@ -24,7 +44,7 @@
                             alt="Avatar 1">
                     </div>
                     <div class="content">
-                        <h3 class="name">
+                        <h3 class="content__name">
                             Irma J. Erwin
                         </h3>
                         <div class="content__position">
@@ -56,7 +76,7 @@
                             alt="Avatar 1">
                     </div>
                     <div class="content">
-                        <h3 class="name">
+                        <h3 class="content__name">
                             Irma J. Erwin
                         </h3>
                         <div class="content__position">
