--- a/cau-6.html
+++ b/cau-6.html
@@ -8,16 +8,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/cau-6.css">
     <style>
-         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        h2 {
+            display: block;
+            font-size: 1.5em;
+            margin-block-start: 0.83em;
+            margin-block-end: 0.83em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            font-weight: bold;
+        }
+
+        p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+        }
     </style>
 </head>
+
 <body>
+    <h2>Câu 6: Header</h2>
+    <p><strong>Yêu cầu</strong>: Sử dụng HTML và CSS để dựng khối bên dưới.</p>
     <header class="header">
         <div class="container">
             <div class="wrap">
                 <div class="logo">
                     <a href="#">
-                        <img class="logo__img" src="https://course-front-end-24.vercel.app/lessons/lesson-6/images/logo-28tech.svg" alt="28Tech">
+                        <img class="logo__img"
+                            src="https://course-front-end-24.vercel.app/lessons/lesson-6/images/logo-28tech.svg"
+                            alt="28Tech">
                     </a>
                 </div>
                 <nav class="menu">
